<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MobileLabel"
            android:textAlignment="viewStart"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/et_mobile"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/textColor"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordLabel"
            android:textAlignment="viewStart"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/et_password"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:layout_marginBottom="46dp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:padding="15dp"
            android:text="@string/LoginLabel"
            android:textAlignment="center"
            android:textColor="@color/bgColor" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/bgGrey"
            android:elevation="5dp"
            android:padding="15dp"
            android:text="@string/RegisterLabel"
            android:textAlignment="center"
            android:textColor="@color/textColor" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone" />


</RelativeLayout>