<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/InvoiceNumberLabel"
        android:textAlignment="center"
        android:textColor="@color/textWhite"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:id="@+id/zone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_translusent_10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SupplierNameAddLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_supplierAddress"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textMultiLine"
                    android:maxLines="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GSTNumberLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_supplierGST"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1" />

            </LinearLayout>
            <!-- put a text change watcher on recipient and change consignee address accordingly-->
            <LinearLayout
                android:id="@+id/zone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_translusent_10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RecipientNameAddLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_recipientAddress"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textMultiLine"
                    android:maxLines="4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GSTNumberLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_recipientGST"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zone3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_translusent_10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ConsigneeNameAddLabel"
                    android:textColor="@color/textWhite" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_translusent_10dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/radio_sameAsBefore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/favorite_radio"
                        android:button="@null"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/SameAsRecipientLabel"
                        android:textAlignment="center"
                        android:textColor="@color/textWhite" />

                    <RadioButton
                        android:id="@+id/radio_addNew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/favorite_radio"
                        android:button="@null"
                        android:padding="10dp"
                        android:text="@string/AddNewLabel"
                        android:textAlignment="center"
                        android:textColor="@color/textWhite" />

                </RadioGroup>
                <!--todo: when same is selected, save AddNew text temporary if required and
                 disable the edit text and show recipient address..
                when Add New is selected load the saved text and enable edit text editing-->
                <EditText
                    android:id="@+id/et_consigneeAddress"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zone4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_translusent_10dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/EwayNumberLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_ewayNumber"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="number"
                    android:maxLength="15"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/VehicleNumberLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_vehicleNumber"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DateLabel"
                    android:textColor="@color/textWhite" />

                <EditText
                    android:id="@+id/et_date"
                    style="@style/EditTextWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:maxLength="15"
                    android:maxLines="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_white_10dp"
                android:elevation="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="Next"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone" />

</RelativeLayout>